--- a/Tokenlist/index.html
+++ b/Tokenlist/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jace Token List</title>
-    <link rel="icon" type="image/png" href="https://woofswap.finance/image/tokens/WOOF.png">
+    <link rel="icon" href="https://woofingjace.com/images/jace.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <style>
         * { box-sizing: border-box; margin: 0; padding: 0; }
